<resources>
    <string name="app_name">Gestion Academica</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Inscribir">Inscribir</string>
    <string name="Borrar">Borrar</string>
    <string name="INSCRIPCION">INSCRIPCIÓN</string>
    <string name="EVALUACION">Evaluación:</string>
    <string name="CURSO_CARRERA">Carrera/Curso:</string>
    <string name="FECHADESDE">Inscripción Desde:</string>
    <string name="FECHAHASTA">Inscripción Hasta:</string>
    <string name="FECHA_EXAMEN">Fecha de Examen:</string>

    <string name="title_activity_lstevaluacion_incripcion_alumno2">
        lstevaluacion_incripcion_alumno2
    </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_lst_evaluacion_inscripcion_alumnos">SGAPP</string>
    <string name="title_activity_lst_evaluaciones_ingreso_alumnos">SGAPP</string>
    <string name="title_activity_tab__borrado">Tab_Borrado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_escolaridad">escolaridad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_lateral_menu">lateral_menu</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
