<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        card_view:cardBackgroundColor="@color/Blanco">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_Curso_Carrera"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="21sp"
                android:text="@string/CURSO_CARRERA"
                android:textColor="@color/GrisClaro" />

            <TextView
                android:id="@+id/txt_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Materia"
                android:textColor="@color/GrisClaro"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txt_evaluacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EVALUACION"
                android:textColor="@color/GrisClaro"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txt_fechaE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FECHA_EXAMEN"
                android:textColor="@color/GrisClaro"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txt_fechaD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FECHAHASTA"
                android:textColor="@color/GrisClaro"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txt_fechaH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FECHADESDE"
                android:textColor="@color/GrisClaro"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/btn_IngBor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="14sp"
                android:text="NombreDelBoton"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>